--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-body {
-  font: 14px helvetica neue, helvetica, arial, sans-serif;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  margin: 0;
-  padding: 0;
+h1 {
+  opacity: 0.5;
+  font-size: 1em;
+}
+
+#cy {
+  border: solid;
+  border-width: 1;
+  height: 80%
 }
