Resize and pad cytoscape div and container
- divs are now padded with a few pixels
- subtract INDRA image header + menu from height allowed to cytoscape div.
  this keeps it from taking up more than the window height and making the
  user scroll.

--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,6 @@
 html, body {
-  margin: 50;
+  height: calc(100% - 10%);
+  margin: 2%;
 }
 
 h1 {
@@ -17,8 +18,12 @@ h5 {
 
 .cy {
   border: solid;
-  border-width: 1;
-  height: 80%
+  border-width: 0.5;
+  height: 100%;
+}
+
+.cy-container {
+  height: 100%;
 }
 
 .btn-div{
