update evidence button style in css
- pull it to the right of the panel

--- a/static/style.css
+++ b/static/style.css
@@ -33,6 +33,13 @@ h5 {
 
 }
 
+.btn-evidence{
+  padding-top:5px;
+  padding-bottom:5px;
+  float: right;
+
+}
+
 body .modal-dialog {
     /* new custom width */
     width: 80%;
